# risklens-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  documentation.yml
configs/: assistant.yaml  data_contract.yaml  modeling.yaml  monitoring.yaml  new_application_simulator.yaml  rag.yaml  rag_evaluation.yaml
data/: README.md
reports/: data_audit.md  final_holdout_report.md  full_history_responsible_ai_report.md  model_card.md  model_governance_freeze.json  monitoring_report.md  new_application_simulator_model_card.md  new_application_simulator_release.json  rag_retrieval_report.md  responsible_ai_report.md  shap_explainability_report.md
src/risklens/: __init__.py  cli.py  config.py
src/risklens/api/: __init__.py  main.py
src/risklens/dashboard/: __init__.py  app.py  client.py  feature_labels.py
src/risklens/data/: __init__.py  audit.py  splitting.py  validation.py
src/risklens/explainability/: __init__.py  shap_analysis.py
src/risklens/fairness/: __init__.py  evaluation.py  full_history.py
src/risklens/features/: __init__.py  application.py  governance.py  (+2 more)
tests/integration/: test_api.py
tests/unit/: test_application_features.py  test_assistant.py  test_audit.py  test_baseline.py  test_calibration.py  test_candidate.py  test_dashboard_client.py  test_decision.py  test_docker_contract.py  test_drift.py  test_fairness.py  test_feature_governance.py  test_feature_labels.py  test_full_history.py  test_full_history_calibration.py  test_full_history_decision.py  test_full_history_fairness.py  test_history_features.py  test_holdout.py  test_inference.py  test_knowledge_base.py  test_model_card.py  test_modeling_metrics.py  test_new_application.py  test_new_application_serving.py  test_shap_analysis.py  test_splitting.py  test_validation.py
website/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
(+22 files in other folders)
