[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risklens-ai"
version = "0.1.0"
description = "Explainable credit-risk intelligence and decision-support platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Supratik Saha" }
]

dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=2.0,<3.0",
    "scipy>=1.14,<2.0",
    "scikit-learn>=1.5,<2.0",
    "imbalanced-learn>=0.12,<1.0",
    "xgboost>=2.1,<4.0",
    "shap>=0.46,<1.0",
    "pyarrow>=17,<30",
    "joblib>=1.4,<2.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "PyYAML>=6.0,<7.0",
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13,<1.0",
    "plotly>=5.24,<7.0",
    "mlflow>=2.17,<4.0",
    "typer>=0.12,<1.0"
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "streamlit>=1.40,<2.0"
]

rag = [
    "sentence-transformers>=3.3,<6.0",
    "faiss-cpu>=1.9,<2.0",
    "openai>=1.55,<3.0"
]

dev = [
    "pytest>=8.3,<10.0",
    "pytest-cov>=6.0,<8.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
    "pre-commit>=4.0,<5.0",
    "ipykernel>=6.29,<8.0",
    "jupyterlab>=4.3,<5.0"
]

[project.scripts]
risklens = "risklens.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src/risklens --cov-report=term-missing"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/risklens"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70